# ppattern-benchmark

./: README.md  ppattern-benchmark.cabal
data/: ppattern-benchmark-analysis.ipynb  ppattern-benchmark-psize-10-qsize-200-psplit-10-qsplit-10.csv  ppattern-benchmark-psize-10-qsize-200-psplit-10-qsplit-12.csv  ppattern-benchmark-psize-10-qsize-200-psplit-2-qsplit-2.csv  ppattern-benchmark-psize-10-qsize-200-psplit-2-qsplit-3.csv  ppattern-benchmark-psize-10-qsize-200-psplit-2-qsplit-4.csv  ppattern-benchmark-psize-10-qsize-200-psplit-3-qsplit-3.csv  ppattern-benchmark-psize-10-qsize-200-psplit-3-qsplit-4.csv  ppattern-benchmark-psize-10-qsize-200-psplit-3-qsplit-5.csv  ppattern-benchmark-psize-10-qsize-200-psplit-4-qsplit-4.csv  ppattern-benchmark-psize-10-qsize-200-psplit-4-qsplit-5.csv  ppattern-benchmark-psize-10-qsize-200-psplit-4-qsplit-6.csv  ppattern-benchmark-psize-10-qsize-200-psplit-5-qsplit-5.csv  ppattern-benchmark-psize-10-qsize-200-psplit-5-qsplit-6.csv  ppattern-benchmark-psize-10-qsize-200-psplit-5-qsplit-7.csv  ppattern-benchmark-psize-10-qsize-200-psplit-6-qsplit-6.csv  ppattern-benchmark-psize-10-qsize-200-psplit-6-qsplit-7.csv  ppattern-benchmark-psize-10-qsize-200-psplit-6-qsplit-8.csv  ppattern-benchmark-psize-10-qsize-200-psplit-8-qsplit-10.csv  ppattern-benchmark-psize-10-qsize-200-psplit-8-qsplit-8.csv  ppattern-benchmark-psize-12-qsize-200-psplit-10-qsplit-10.csv  ppattern-benchmark-psize-12-qsize-200-psplit-10-qsplit-12.csv  ppattern-benchmark-psize-12-qsize-200-psplit-2-qsplit-2.csv  ppattern-benchmark-psize-12-qsize-200-psplit-2-qsplit-3.csv  (+94 more)
(+6 files in other folders)
